--- a/templates/result.html
+++ b/templates/result.html
@@ -1,4 +1,17 @@
+<!----------------------------------------------------------------------------
 
+##############################################################################
+#                                                                            #
+# Cracked By ---> Virendra Rajput <---                                       #
+# Twitter @bkvirendra                                                        #
+# Github @bkvirendra                                                         #
+# Blogging @ http://virendrarajput.tumblr.com                                #
+#                                                                            #
+# Authored on 19th September, 2012 (took approx. 2 hours) [2:15pm to 4:10pm] #
+#                                                                            #
+##############################################################################
+
+  ---------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html>
 <head>
