--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,7 @@
 
 ##############################################################################
 #                                                                            #
-# Cracked By ---> Virendra Rajput <---                                       #
+# Cracked By Virendra Rajput                                                 #
 # Twitter @bkvirendra                                                        #
 # Github @bkvirendra                                                         #
 # Blogging @ http://virendrarajput.tumblr.com                                #
